--- a/src/js/index.html
+++ b/src/js/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <body>
+		<p>Bench</p>
+        <script src="utils.js" type="text/javascript"></script>
         <script src="whetstone.js" type="text/javascript"></script>
+		<script src="dhrystone.js" type="text/javascript"></script>
+		<script src="main.js" type="text/javascript"></script>
     </body>
 </html>
