--- a/src/js/index.html
+++ b/src/js/index.html
@@ -5,6 +5,7 @@
         <script src="utils.js" type="text/javascript"></script>
         <script src="whetstone.js" type="text/javascript"></script>
 		<script src="dhrystone.js" type="text/javascript"></script>
+		<script src="scimark2.js" type="text/javascript"></script>
 		<script src="main.js" type="text/javascript"></script>
     </body>
 </html>
