Js benchmark implementation

--- a/src/js/index.html
+++ b/src/js/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <body>
-		<p>Bench</p>
+    <body style="background-color: #282c37">
+		<h1 style="font-family: monospace; color: #61afef;">EntityFX JavaScript Benchmark</h1>
+		<p style="font-family: monospace; color: #dcdfe4;">Wait until completed...</p>
         <script src="utils.js" type="text/javascript"></script>
         <script src="whetstone.js" type="text/javascript"></script>
 		<script src="dhrystone.js" type="text/javascript"></script>
 		<script src="scimark2.js" type="text/javascript"></script>
+		<script src="benchmarkBase.js" type="text/javascript"></script>
+		<script src="arithmeticsBase.js" type="text/javascript"></script>
+		<script src="arithmetics.js" type="text/javascript"></script>
+		<script src="mathBase.js" type="text/javascript"></script>
+		<script src="mathBenchmark.js" type="text/javascript"></script>
+		<script src="dhrystoneBenchmark.js" type="text/javascript"></script>
+		<script src="whetstoneBenchmark.js" type="text/javascript"></script>
+		<script src="scimark2Benchmark.js" type="text/javascript"></script>
+		<script src="memoryBenchmarkBase.js" type="text/javascript"></script>
+		<script src="memoryBenchmark.js" type="text/javascript"></script>
+		<script src="randomMemoryBenchmarkBase.js" type="text/javascript"></script>
+		<script src="randomMemoryBenchmark.js" type="text/javascript"></script>
 		<script src="main.js" type="text/javascript"></script>
     </body>
 </html>
